# diablo_lidar_camera_calibration_instruction

./: .gitmodules  README.md  calib_image_undistortion.py  draw_traj.py  fix_gravity_matrix.py  lidar_pose_to_camera_pose.py  quat_to_matrix.py  visualize_point_map.py
diablo_lidar_dataset_generator/src/livox_ros_driver2/: CMakeLists.txt  package.xml
diablo_lidar_dataset_generator/src/rosbag_saver/: CMakeLists.txt  package.xml
diablo_lidar_dataset_generator/src/rosbag_saver/src/: livox_bridge.cpp  my_rosbag.cpp
filter_pcd_cpp/: CMakeLists.txt  main.cpp
lidar_cam_calib_rosbag_exporter/: .gitignore
lidar_cam_calib_rosbag_exporter/sync_saver/: CMakeLists.txt  package.xml
lidar_cam_calib_rosbag_exporter/sync_saver/src/: sync_saver_node.cpp
